Tech doc - New api of macroenvsign

--- a/factory/01-general/01-general[fr].tex
+++ b/factory/01-general/01-general[fr].tex
@@ -91,15 +91,15 @@ Le préfixe \prefix{e} est pour \whyprefix{e}{xpand} soit \inenglish{développer
 
 \subsection{Fiches techniques}
 
-\IDmacro[2]{probacond}{1}{2}
+\IDmacro{probacond  }{1}{2}
 
-\IDmacro[1]{probacond*}{1}{2}
+\IDmacro{probacond* }{1}{2}
 
 \extraspace
 
-\IDmacro[1]{eprobacond}{1}{2}
+\IDmacro{eprobacond }{1}{2}
 
-\IDmacro   {eprobacond*}{1}{2}
+\IDmacro{eprobacond*}{1}{2}
 
 
 \IDoption{} le nom de la probabilité. La valeur par défaut est $p$.
