--- a/factory/01-general/02-events[fr].tex
+++ b/factory/01-general/02-events[fr].tex
@@ -25,7 +25,7 @@ $\nevent{A}$
 
 \subsection{Fiches techniques}
 
-\IDmacro*{nevent}{1}
+\IDmacro[a]{nevent}{1}
 
 \IDarg{} l'ensemble dont on veut indiquer le contraire.
 
