--- a/factory/02-tree/01-04-tree-technical[fr].tex
+++ b/factory/02-tree/01-04-tree-technical[fr].tex
@@ -16,9 +16,9 @@
 
 \section{Fiches techniques}
 
-\IDenv*{probatree}
+\IDenv[n]{probatree}
 
-\IDenv*{probatree*}
+\IDenv[n]{probatree*}
 
 \Content{} un arbre codé en utilisant la syntaxe supportée par le package \verb+forest+.
 
