--- a/factory/02-tree/01-tree.sty
+++ b/factory/02-tree/01-tree.sty
@@ -1,7 +1,68 @@
+% ---------------------- %
+% -- IMPORTS REQUIRED -- %
+% ---------------------- %
+
+% A
+\RequirePackage{amssymb}
+% B
+\RequirePackage{bm}
+% C
+\RequirePackage{centernot}
+\RequirePackage{circledsteps}
+\RequirePackage{commado}
+% D
+\RequirePackage{dsfont}
+% E
+\RequirePackage{esvect}
+\PassOptionsToPackage{f}{esvect}
+% F
+\RequirePackage{forest}
+\RequirePackage{forloop}
+% I
+\RequirePackage{ifmtarg}
+% L
+\RequirePackage{longtable}
+% M
+\RequirePackage{mathrsfs}
+\RequirePackage{mathtools}
+% N
+\RequirePackage{nicematrix}
+% P
+\RequirePackage{pgfplots}
+% R
+\RequirePackage{relsize}
+% S
+\RequirePackage{simplekv}
+\RequirePackage{stackengine}
+\RequirePackage{stmaryrd}
+% T
+\RequirePackage{tkz-tab}
+\RequirePackage{tnscom}
+\RequirePackage{trimspaces}
+% U
+\RequirePackage{upgreek}
+\PassOptionsToPackage{Symbolsmallscale}{upgreek}
+% W
+\RequirePackage{witharrows}
+% X
+\RequirePackage{xstring}
+% Y
+\RequirePackage{yhmath}
+
+% TikZ libraries
+\usetikzlibrary{arrows.meta}
+\usetikzlibrary{babel}
+\usetikzlibrary{backgrounds}
+\usetikzlibrary{calc}
+
+
+
+
 % == PACKAGES USED == %
 
 \RequirePackage{forest}
 \usetikzlibrary{calc}
+\usetikzlibrary{babel}
 
 
 % == DEFINITIONS == %
