--- a/tnsproba/tnsproba-doc[fr].tex
+++ b/tnsproba/tnsproba-doc[fr].tex
@@ -398,11 +398,11 @@ Le gros du travail est fait par le package \verb+forest+ qui utilise \verb+TiKz+
 
 \newparaexample{Le cas type}
 
-Dans le code suivant l'environnement \verb+probatree+ utilise en coulisse celui nommé \verb+forest+ du package \verb+forest+. Des réglages spécifiques sont faits pour obtenir le résultat ci-après.
+Dans le code suivant, l'environnement \verb+probatree+ utilise en coulisse celui nommé \verb+forest+ du package \verb+forest+ avec des réglages spécifiques.
 À cela s'ajoutent les styles spéciaux \verb+pweight+, \verb+apweight+ et \verb+bpweight+ qui facilitent l'écriture des pondérations sur les branches
 \footnote{
-    \texttt{pweight} vient de \emph{\og probability \fg} et \emph{\og weight\fg} soit \emph{\og probabilité \fg} et \emph{\og poids\fg} en anglais.
-    Quant à \texttt{a} et \texttt{b} au début de \texttt{apweight} et \texttt{bpweight} respectivement, ils viennent de \emph{\og above \fg} et \emph{\og below\fg} soit \emph{\og dessus \fg} et \emph{\og dessous\fg} en anglais.
+    \prefix{pweight} vient de \whyprefix{p}{robability} et \prefix{weight} soit \inenglish*{probabilité} et \inenglish{poids}.
+    Quant à \prefix{a} et \prefix{b} au début de \prefix{apweight} et \prefix{bpweight} respectivement, ils viennent de \whyprefix{a}{bove} et \whyprefix{b}{elow} soit \inenglish*{dessus} et \inenglish{dessous}.
 }.
 
 \inputlatexex{tikz/weight-placement.tkz}
@@ -434,7 +434,7 @@ Pour ne cacher que certains poids, il faudra utiliser localement le style \verb+
 \newparaexample{Un signe $=$ et/ou une virgule dans les étiquettes}
 
 Vous ne pouvez pas utiliser directement un signe $=$ ou une virgule dans les étiquettes des branches.
-Pour contourner cette limitation, il suffit de mettre le contenu de l'étiquette dans des accolades.
+Pour contourner cette limitation, il suffit de mettre le contenu de l'étiquette entre des accolades.
 
 \inputlatexex{tikz/weight-coma-equal.tkz}
 %\section{Arbres pondérés}
@@ -575,15 +575,15 @@ Tous les changements sont disponibles uniquement en anglais dans le dossier \ver
 
 
 
-\IDmacro[2]{probacond}{1}{2}
+\IDmacro{probacond  }{1}{2}
 
-\IDmacro[1]{probacond*}{1}{2}
+\IDmacro{probacond* }{1}{2}
 
 \extraspace
 
-\IDmacro[1]{eprobacond}{1}{2}
+\IDmacro{eprobacond }{1}{2}
 
-\IDmacro   {eprobacond*}{1}{2}
+\IDmacro{eprobacond*}{1}{2}
 
 
 \IDoption{} le nom de la probabilité. La valeur par défaut est $p$.
@@ -597,7 +597,7 @@ Tous les changements sont disponibles uniquement en anglais dans le dossier \ver
 
 
 
-\IDmacro*{nevent}{1}
+\IDmacro[a]{nevent}{1}
 
 \IDarg{} l'ensemble dont on veut indiquer le contraire.
 
@@ -646,9 +646,9 @@ Tous les changements sont disponibles uniquement en anglais dans le dossier \ver
 
 
 
-\IDenv*{probatree}
+\IDenv[n]{probatree}
 
-\IDenv*{probatree*}
+\IDenv[n]{probatree*}
 
 \Content{} un arbre codé en utilisant la syntaxe supportée par le package \verb+forest+.
 
