Suffixes for extra files + Undecorated proba tree in the doc

--- a/factory/02-tree/01-02-tree-comment[fr].tex
+++ b/factory/02-tree/01-02-tree-comment[fr].tex
@@ -21,7 +21,7 @@ Que ce soit pour expliquer un arbre de probabilité  ou raisonner dessus, l'effe
 Noter qu'ici il a fallu utiliser des accolades pour cacher à TikZ les signes $=$ dans les commentaires.
 
 
-\inputlatexexflat{tikz/comment.tkz}
+\inputlatexexflat{tikz/probatree-comment.tkz}
 
 
 \begin{remark}
