--- a/factory/02-tree/01-03-tree-frame[fr].tex
+++ b/factory/02-tree/01-03-tree-frame[fr].tex
@@ -24,7 +24,7 @@ Via la clé \verb+pframe+, il est très aisé d'encadrer un sous-arbre final
 }
 comme le montre l'exemple suivant. Dans l'exemple ci-après nous utilisons la bidouille \verb+{},s sep = 1.3cm+ qui évite que les cadres se superposent.
 
-\inputlatexex{tikz/frame-final.tkz}
+\inputlatexex{tikz/probatree-frame-final.tkz}
 
 
 % ---------------------- %
@@ -37,6 +37,6 @@ La macro \macro{ptreeFrame} permet facilement d'encadrer un sous-arbre non final
 Ceci nécessite de nommer les noeuds mais c'est facile à faire.
 Voici un exemple où la macro \macro{ptreeFrame} attend les noms de la racine via \verb#{}, name = nU#, et des deux noeuds finaux le plus haut et le plus bas de façon similaire.
 
-\inputlatexex{tikz/frame-not-final.tkz}
+\inputlatexex{tikz/probatree-frame-not-final.tkz}
 
 \end{document}
