--- a/tnsproba/tnsproba-doc[fr].tex
+++ b/tnsproba/tnsproba-doc[fr].tex
@@ -388,7 +388,7 @@ $\stddev[s]{X}$
 
 Le gros du travail est fait par le package \verb+forest+ qui utilise \verb+TiKz+. On peut donc faire appel à la machinerie de ce dernier et obtenir des choses sympathiques comme ci-dessous à moindre coût neuronal.
 
-\inputlatexexcodeafter{tikz/showcase.tkz}
+\inputlatexexcodeafter{tikz/probatree-showcase.tkz}
 
 
 % ---------------------- %
@@ -398,14 +398,24 @@ Le gros du travail est fait par le package \verb+forest+ qui utilise \verb+TiKz+
 
 \newparaexample{Le cas type}
 
-Dans le code suivant, l'environnement \verb+probatree+ utilise en coulisse celui nommé \verb+forest+ du package \verb+forest+ avec des réglages spécifiques.
-À cela s'ajoutent les styles spéciaux \verb+pweight+, \verb+apweight+ et \verb+bpweight+ qui facilitent l'écriture des pondérations sur les branches
+Commençons par un arbre nu pour voir comment utiliser l'environnement \verb+probatree+ qui s'appuie en coulisse sur celui nommé \verb+forest+ du package éponyme.
+L'exemple qui suit utilise juste les réglages spécifiques de mise en forme de l'arbre qui sont propres à \verb+probatree+.
+
+\inputlatexex{tikz/probatree-undecorated.tkz}
+
+
+% ---------------------- %
+
+
+\newparaexample{Ajouter des pondérations}
+
+Dans le code suivant, ce sont les styles spéciaux supplémentaires \verb+pweight+, \verb+apweight+ et \verb+bpweight+ qui facilitent l'écriture des pondérations sur les branches
 \footnote{
     \prefix{pweight} vient de \whyprefix{p}{robability} et \prefix{weight} soit \inenglish*{probabilité} et \inenglish{poids}.
-    Quant à \prefix{a} et \prefix{b} au début de \prefix{apweight} et \prefix{bpweight} respectivement, ils viennent de \whyprefix{a}{bove} et \whyprefix{b}{elow} soit \inenglish*{dessus} et \inenglish{dessous}.
+    Quant au \prefix{a} et au \prefix{b} au début de \prefix{apweight} et \prefix{bpweight} respectivement, ils viennent de \whyprefix{a}{bove} et \whyprefix{b}{elow} soit \inenglish*{dessus} et \inenglish{dessous}.
 }.
 
-\inputlatexex{tikz/weight-placement.tkz}
+\inputlatexex{tikz/probatree-weight-placement.tkz}
 
 
 % ---------------------- %
@@ -413,9 +423,9 @@ Dans le code suivant, l'environnement \verb+probatree+ utilise en coulisse celui
 
 \newparaexample{Des poids cachés partout}
 
-On peut cacher tous les poids via l'environnement étoilé \verb+probatree*+ sans avoir à les effacer partout dans le code \LaTeX.
+On peut cacher tous les poids via l'environnement étoilé \verb+probatree*+ sans avoir à les effacer partout dans le code \LaTeX{} \emph{(ceci peut être utile lors de la rédaction d'exercices)}.
 
-\inputlatexex{tikz/weight-hide-all.tkz}
+\inputlatexex{tikz/probatree-weight-hide-all.tkz}
 
 
 % ---------------------- %
@@ -423,9 +433,9 @@ On peut cacher tous les poids via l'environnement étoilé \verb+probatree*+ san
 
 \newparaexample{Des poids cachés localement}
 
-Pour ne cacher que certains poids, il faudra utiliser localement le style \verb+pweight*+ comme dans l'exemple ci-dessous.
+Pour ne cacher que certains poids afin de produire par exemple un arbre à compléter, il faudra utiliser localement le style \verb+pweight*+ comme dans l'exemple ci-dessous.
 
-\inputlatexex{tikz/weight-hide-locally.tkz}
+\inputlatexex{tikz/probatree-weight-hide-locally.tkz}
 
 
 % ---------------------- %
@@ -433,10 +443,13 @@ Pour ne cacher que certains poids, il faudra utiliser localement le style \verb+
 
 \newparaexample{Un signe $=$ et/ou une virgule dans les étiquettes}
 
-Vous ne pouvez pas utiliser directement un signe $=$ ou une virgule dans les étiquettes des branches.
+Vous ne pouvez pas utiliser directement un signe $=$ ou une virgule dans les étiquettes des branches
+\footnote{
+	Ces deux symboles font partie de la syntaxe TikZ.
+}.
 Pour contourner cette limitation, il suffit de mettre le contenu de l'étiquette entre des accolades.
 
-\inputlatexex{tikz/weight-coma-equal.tkz}
+\inputlatexex{tikz/probatree-weight-coma-equal.tkz}
 %\section{Arbres pondérés}
 
 \subsection{Commenter les racines}
@@ -445,7 +458,7 @@ Que ce soit pour expliquer un arbre de probabilité  ou raisonner dessus, l'effe
 Noter qu'ici il a fallu utiliser des accolades pour cacher à TikZ les signes $=$ dans les commentaires.
 
 
-\inputlatexexflat{tikz/comment.tkz}
+\inputlatexexflat{tikz/probatree-comment.tkz}
 
 
 \begin{remark}
@@ -464,7 +477,7 @@ Via la clé \verb+pframe+, il est très aisé d'encadrer un sous-arbre final
 }
 comme le montre l'exemple suivant. Dans l'exemple ci-après nous utilisons la bidouille \verb+{},s sep = 1.3cm+ qui évite que les cadres se superposent.
 
-\inputlatexex{tikz/frame-final.tkz}
+\inputlatexex{tikz/probatree-frame-final.tkz}
 
 
 % ---------------------- %
@@ -477,7 +490,7 @@ La macro \macro{ptreeFrame} permet facilement d'encadrer un sous-arbre non final
 Ceci nécessite de nommer les noeuds mais c'est facile à faire.
 Voici un exemple où la macro \macro{ptreeFrame} attend les noms de la racine via \verb#{}, name = nU#, et des deux noeuds finaux le plus haut et le plus bas de façon similaire.
 
-\inputlatexex{tikz/frame-not-final.tkz}
+\inputlatexex{tikz/probatree-frame-not-final.tkz}
 %\section{Arbres pondérés}
 \newpage
 
