New minor version 0.4.0-beta - Focus on edges

--- a/factory/00-intro/01-intro[fr].tex
+++ b/factory/00-intro/01-intro[fr].tex
@@ -12,4 +12,11 @@
 
 Le package \verb+tnsproba+ propose des macros utiles quand l'on parle de probabilités. La saisie se veut sémantique et simple.
 
+
+% tnscom used - START
+\section{Beta-dépendance}
+
+\verb#\tnscom# qui est disponible sur \url{https://github.com/typensee-latex/tnscom.git} est un package utilisé en coulisse.
+% tnscom used - END
+
 \end{document}
