--- a/factory/02-tree/01-02-tree-comment[fr].tex
+++ b/factory/02-tree/01-02-tree-comment[fr].tex
@@ -17,7 +17,7 @@
 
 \subsection{Commenter les racines}
 
-Que ce soit pour expliquer un arbre de probabilité  ou raisonner dessus, l'effet suivant est très utile.
+Que ce soit pour expliquer un arbre de probabilité, ou bien pour raisonner sur ce dernier, l'effet suivant est très utile.
 Noter qu'ici il a fallu utiliser des accolades pour cacher à TikZ les signes $=$ dans les commentaires.
 
 
