--- a/factory/99-major-change-log/01-change-log[fr].tex
+++ b/factory/99-major-change-log/01-change-log[fr].tex
@@ -22,6 +22,17 @@ Tous les changements sont disponibles uniquement en anglais dans le dossier \ver
 % Changes shown - START
 
     \medskip
+    \item[2020-07-31] Nouvelle version mineure \verb+0.4.0-beta+.
+    
+    \begin{itemize}[itemsep=.5em]
+        \item \topic*{Arbre}
+        	  possibilité de mettre en valeur un chemin via \macro{ptreeFocus},  \macro{ptreeFocus*} ou \macro{ptreeFocus**}.
+    \end{itemize}
+    
+    \separation
+% ------------------------ %
+
+    \medskip
     \item[2020-07-25] Nouvelle version mineure \verb+0.3.0-beta+.
     
     \begin{itemize}[itemsep=.5em]
@@ -31,9 +42,9 @@ Tous les changements sont disponibles uniquement en anglais dans le dossier \ver
     
             \item Le style \prefix{frame} a été renommé \prefix{pframe}.
         \end{itemize}
-    
-        \separation
     \end{itemize}
+    
+    \separation
 % ------------------------ %
 
     \medskip
@@ -42,9 +53,9 @@ Tous les changements sont disponibles uniquement en anglais dans le dossier \ver
     \begin{itemize}[itemsep=.5em]
         \item \topic*{Arbre}
               ajout de la macro \macro{ptreeFrame} pour tracer facilement des sous cadres non \og finaux \fg.
-    
-        \separation
     \end{itemize}
+    
+    \separation
 % ------------------------ %
 
     \medskip
