--- a/factory/02-tree/01-05-tree-technical[fr].tex
+++ b/factory/02-tree/01-05-tree-technical[fr].tex
@@ -48,4 +48,20 @@
 
 \IDargs{1..3} noms de la sous-racine (à gauche), du noeud final en haut (à droite) et du noeud final en bas (à droite). Ici l'ordre n'est pas important.
 
+
+\separation
+
+
+\IDmacro{ptreeFocus  }{1}{2}
+
+\IDmacro{ptreeFocus* }{1}{2}
+
+\IDmacro{ptreeFocus**}{1}{2}
+
+\IDoption{} la couleur au format TikZ. La valeur par défaut est \verb#blue#.
+
+\IDarg{1} nom du noeud initial.
+
+\IDarg{2} nom du noeud final.
+
 \end{document}
