--- a/tnsproba/tnsproba-doc[fr].tex
+++ b/tnsproba/tnsproba-doc[fr].tex
@@ -233,10 +233,10 @@
 	Le package \texttt{tnsproba}:\\%
 	parler des probabilités facilement\\%
 	{\footnotesize Code source disponible sur \url{https://github.com/typensee-latex/tnsproba.git}.}\\%
-{\footnotesize Version \texttt{0.3.0-beta} développée et testée sur \macosxname{}.}%
+{\footnotesize Version \texttt{0.4.0-beta} développée et testée sur \macosxname{}.}%
 }
 \author{Christophe BAL}
-\date{2020-07-25}
+\date{2020-07-31}
 
 \maketitle
 
@@ -256,6 +256,25 @@
 \section{Introduction}
 
 Le package \verb+tnsproba+ propose des macros utiles quand l'on parle de probabilités. La saisie se veut sémantique et simple.
+
+
+% tnscom used - START
+\section{Beta-dépendance}
+
+\verb#\tnscom# qui est disponible sur \url{https://github.com/typensee-latex/tnscom.git} est un package utilisé en coulisse.
+% tnscom used - END
+% List of packages - START
+\section{Packages utilisés}
+
+La roue ayant déjà été inventée, le package \verb#tnsproba# réutilise les packages suivants sans aucun scrupule.
+
+\begin{multicols}{4}
+    \begin{itemize}
+        \item \verb#amsmath#
+        \item \verb#forest#
+    \end{itemize}
+\end{multicols}
+% List of packages - END
 \section{Ensembles probabilistes}
 
 Le package \verb+tnssets+ propose le macro \macro{setproba} pour indiquer des ensembles de type probabiliste.
@@ -454,7 +473,7 @@ Pour contourner cette limitation, il suffit de mettre le contenu de l'étiquette
 
 \subsection{Commenter les racines}
 
-Que ce soit pour expliquer un arbre de probabilité  ou raisonner dessus, l'effet suivant est très utile.
+Que ce soit pour expliquer un arbre de probabilité, ou bien pour raisonner sur ce dernier, l'effet suivant est très utile.
 Noter qu'ici il a fallu utiliser des accolades pour cacher à TikZ les signes $=$ dans les commentaires.
 
 
@@ -471,8 +490,8 @@ Noter qu'ici il a fallu utiliser des accolades pour cacher à TikZ les signes $=
 
 \newparaexample{Des cadres finaux}
 
-Via la clé \verb+pframe+, il est très aisé d'encadrer un sous-arbre final
-\footnote{
+Via la clé \verb#pframe# il est très aisé d'encadrer un sous-arbre final
+\footnote{ 
 	Un sous-arbre sera dit final si toutes ses feuilles correspondent à des feuilles de l'arbre initial. 
 }
 comme le montre l'exemple suivant. Dans l'exemple ci-après nous utilisons la bidouille \verb+{},s sep = 1.3cm+ qui évite que les cadres se superposent.
@@ -488,9 +507,28 @@ comme le montre l'exemple suivant. Dans l'exemple ci-après nous utilisons la bi
 
 La macro \macro{ptreeFrame} permet facilement d'encadrer un sous-arbre non final.
 Ceci nécessite de nommer les noeuds mais c'est facile à faire.
-Voici un exemple où la macro \macro{ptreeFrame} attend les noms de la racine via \verb#{}, name = nU#, et des deux noeuds finaux le plus haut et le plus bas de façon similaire.
+Voici un exemple où la macro \macro{ptreeFrame} attend les noms de la racine et des deux noeuds finaux le plus haut et le plus bas qui sont ajoutés via \verb#name = ...# dans le code de l'arbre.
 
 \inputlatexex{tikz/probatree-frame-not-final.tkz}
+%\section{Arbres pondérés}
+
+\subsection{Mettre en valeur des chemins}
+
+Il est relativement aisé de mettre en valeur un chemin particulier comme dans l'exemple ci-après qui est une simple démo. montrant les différences entre \macro{ptreeFocus},  \macro{ptreeFocus*} et \macro{ptreeFocus**}.
+
+\inputlatexex{tikz/probatree-focus-edge.tkz}
+
+Voici ce qu'il faut retenir.
+
+\begin{enumerate}
+	\item \macro{ptreeFocus} encadre les noeuds initial et final.
+
+	\item \macro{ptreeFocus*} encadre juste le noeud final.
+
+	\item \macro{ptreeFocus**} n'encadre aucun des deux noeuds.
+	
+	\item La couleur peut être changée via l'argument optionnel. Par défaut le bleu est utilisé.
+\end{enumerate}
 %\section{Arbres pondérés}
 \newpage
 
@@ -507,6 +545,17 @@ Tous les changements sont disponibles uniquement en anglais dans le dossier \ver
 % Changes shown - START
 
     \medskip
+    \item[2020-07-31] Nouvelle version mineure \verb+0.4.0-beta+.
+    
+    \begin{itemize}[itemsep=.5em]
+        \item \topic*{Arbre}
+        	  possibilité de mettre en valeur un chemin via \macro{ptreeFocus},  \macro{ptreeFocus*} ou \macro{ptreeFocus**}.
+    \end{itemize}
+    
+    \separation
+% ------------------------ %
+
+    \medskip
     \item[2020-07-25] Nouvelle version mineure \verb+0.3.0-beta+.
     
     \begin{itemize}[itemsep=.5em]
@@ -516,9 +565,9 @@ Tous les changements sont disponibles uniquement en anglais dans le dossier \ver
     
             \item Le style \prefix{frame} a été renommé \prefix{pframe}.
         \end{itemize}
-    
-        \separation
     \end{itemize}
+    
+    \separation
 % ------------------------ %
 
     \medskip
@@ -527,9 +576,9 @@ Tous les changements sont disponibles uniquement en anglais dans le dossier \ver
     \begin{itemize}[itemsep=.5em]
         \item \topic*{Arbre}
               ajout de la macro \macro{ptreeFrame} pour tracer facilement des sous cadres non \og finaux \fg.
-    
-        \separation
     \end{itemize}
+    
+    \separation
 % ------------------------ %
 
     \medskip
@@ -559,6 +608,9 @@ Tous les changements sont disponibles uniquement en anglais dans le dossier \ver
 
 \newpage
 \section{Toutes les fiches techniques} \label{techincal-ids}
+
+
+
 
 
 
@@ -655,6 +707,9 @@ Tous les changements sont disponibles uniquement en anglais dans le dossier \ver
 
 
 
+
+
+
 \subsection{Arbres pondérés}
 
 
@@ -690,6 +745,22 @@ Tous les changements sont disponibles uniquement en anglais dans le dossier \ver
 \IDoption{} la couleur au format TikZ. La valeur par défaut est \verb#blue#.
 
 \IDargs{1..3} noms de la sous-racine (à gauche), du noeud final en haut (à droite) et du noeud final en bas (à droite). Ici l'ordre n'est pas important.
+
+
+\separation
+
+
+\IDmacro{ptreeFocus  }{1}{2}
+
+\IDmacro{ptreeFocus* }{1}{2}
+
+\IDmacro{ptreeFocus**}{1}{2}
+
+\IDoption{} la couleur au format TikZ. La valeur par défaut est \verb#blue#.
+
+\IDarg{1} nom du noeud initial.
+
+\IDarg{2} nom du noeud final.
 
 
 
