New minor version 0.5.0-beta : proba tree is better

--- a/factory/00-intro/01-intro[fr].tex
+++ b/factory/00-intro/01-intro[fr].tex
@@ -16,7 +16,7 @@ Le package \verb+tnsproba+ propose des macros utiles quand l'on parle de probabi
 % tnscom used - START
 \section{Beta-dépendance}
 
-\verb#\tnscom# qui est disponible sur \url{https://github.com/typensee-latex/tnscom.git} est un package utilisé en coulisse.
+\verb#tnscom# qui est disponible sur \url{https://github.com/typensee-latex/tnscom.git} est un package utilisé en coulisse.
 % tnscom used - END
 
 \end{document}
