--- a/factory/00-intro/99-packages-used[fr].tex
+++ b/factory/00-intro/99-packages-used[fr].tex
@@ -17,6 +17,8 @@ La roue ayant déjà été inventée, le package \verb#tnsproba# réutilise les 
     \begin{itemize}
         \item \verb#amsmath#
         \item \verb#forest#
+        \item \verb#trimspaces#
+        \item \verb#xstring#
     \end{itemize}
 \end{multicols}
 % List of packages - END
