--- a/factory/02-tree/01-03-tree-frame[fr].tex
+++ b/factory/02-tree/01-03-tree-frame[fr].tex
@@ -22,9 +22,18 @@ Via la clé \verb#pframe# il est très aisé d'encadrer un sous-arbre final
 \footnote{ 
 	Un sous-arbre sera dit final si toutes ses feuilles correspondent à des feuilles de l'arbre initial. 
 }
-comme le montre l'exemple suivant. Dans l'exemple ci-après nous utilisons la bidouille \verb+{},s sep = 1.3cm+ qui évite que les cadres se superposent.
+comme le montre l'exemple suivant
+\footnote{ 
+	Ce type de cadre est très utile d'un point de vue pédagogique. 
+}.
+Dans l'exemple ci-après nous utilisons la bidouille \verb+{},s sep = 1.3cm+ qui évite que les cadres se superposent.
 
 \inputlatexex{tikz/probatree-frame-final.tkz}
+
+
+\begin{remark}
+	La clé \verb#pframe# est un cas particulier car tous les autres décorations se font en dehors de la définition de l'arbre
+\end{remark}
 
 
 % ---------------------- %
@@ -32,10 +41,9 @@ comme le montre l'exemple suivant. Dans l'exemple ci-après nous utilisons la bi
 
 \newparaexample{Des cadres non finaux}
 
-
 La macro \macro{ptreeFrame} permet facilement d'encadrer un sous-arbre non final.
-Ceci nécessite de nommer les noeuds mais c'est facile à faire.
-Voici un exemple où la macro \macro{ptreeFrame} attend les noms de la racine et des deux noeuds finaux le plus haut et le plus bas qui sont ajoutés via \verb#name = ...# dans le code de l'arbre.
+Ceci nécessite d'utiliser des noms de noeuds.
+Voici un exemple où la macro \macro{ptreeFrame} attend les noms de la racine et des deux noeuds finaux le plus haut et le plus bas.
 
 \inputlatexex{tikz/probatree-frame-not-final.tkz}
 
