--- a/factory/02-tree/01-06-tree-technical[fr].tex
+++ b/factory/02-tree/01-06-tree-technical[fr].tex
@@ -32,10 +32,6 @@
 
 \extraspace
 
-\IDkey{pcomment} pour ajouter un commentaire à la droite d'une feuille en utilisant le même alignement horizontal pour tous les commentaires.
-
-\extraspace
-
 \IDkey{pframe} pour encadrer un sous-arbre depuis un noeud vers toutes les feuilles de celui-ci.
 
 
@@ -46,22 +42,31 @@
 
 \IDoption{} la couleur au format TikZ. La valeur par défaut est \verb#blue#.
 
-\IDargs{1..3} noms de la sous-racine (à gauche), du noeud final en haut (à droite) et du noeud final en bas (à droite). Ici l'ordre n'est pas important.
+\IDargs{1..3} noms de la sous-racine (à gauche), du noeud final en haut (à droite) et du noeud final en bas (à droite). En fait l'ordre n'est pas important ici.
 
 
 \separation
 
 
-\IDmacro{ptreeFocus  }{1}{2}
+\IDmacro{ptreeComment}{1}{2}
 
-\IDmacro{ptreeFocus* }{1}{2}
+\IDoption{} la couleur au format TikZ. La valeur par défaut est \verb#black#.
 
-\IDmacro{ptreeFocus**}{1}{2}
+\IDarg{1} le nom de la feuille.
+
+\IDarg{2} le texte du commentaire.
+
+
+\separation
+
+
+\IDmacro{ptreeFocus  }{1}{1}
+
+\IDmacro{ptreeFocus* }{1}{1}
+
+\IDmacro{ptreeFocus**}{1}{1}
 
 \IDoption{} la couleur au format TikZ. La valeur par défaut est \verb#blue#.
 
-\IDarg{1} nom du noeud initial.
-
-\IDarg{2} nom du noeud final.
-
+\IDarg{} les noms des noeuds dans le bon ordre et séparés par des barres verticales \verb#|#.
 \end{document}
