--- a/factory/99-major-change-log/last-model-nodoc[fr].tex
+++ b/factory/99-major-change-log/last-model-nodoc[fr].tex
@@ -1,19 +1,16 @@
-Nouvelle version mineure \verb+1.2.0-beta+.
+Nouvelle version mineure \verb+0.5.0-beta+.
 
 \begin{itemize}[itemsep=.5em]
-    \item \topic{???}
+    \item \topic{Arbre de probabilités}
     \begin{itemize}[itemsep=.5em]
-        \item ???
-
-              \smallskip
-
-              ???
+        \item \macro{ptreeFocus}, \macro{ptreeFocus*} et \macro{ptreeFocus**} fonctionne avec un multi-argument pour pourvoir indiquer un chemin sur plusieurs noeuds.
+        
+        \item Suppression de la clé \macro{pcomment}.
+        
+        \item Ajout des macros \macro{ptreeComment} et \macro{ptreeComment*} qui simplifie la saisie?
     \end{itemize}
 
 
-
-% ------------------------ %
-
-
-    \separation
 \end{itemize}
+
+\separation
