Header updated + Different doc for tnsmath

--- a/factory/00-intro/991-special-sets[fr].tex
+++ b/factory/00-intro/991-special-sets[fr].tex
@@ -10,7 +10,7 @@
 
 \section{Ensembles probabilistes}
 
-Le package \verb+tnssets+ propose le macro \macro{setproba} pour indiquer des ensembles de type probabiliste.
+Le package \verb+tnssets+ propose la macro \macro{setproba} pour indiquer des ensembles de type probabiliste.
 Se rendre sur \url{https://github.com/typensee-latex/tnssets.git} si cela vous intéresse. 
 
 \end{document}
